all pages added and linked video is not working

--- a/IslahAdmin/aboutus.html
+++ b/IslahAdmin/aboutus.html
@@ -55,7 +55,7 @@
                                             <a class="nav-link ttfw" href="index.html">Home <span class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <a class="nav-link dropdown-toggle ttfw" href="aboutus.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             About Us
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -126,7 +126,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link ttfw" href="#">Contact</a>
+                                            <a class="nav-link ttfw" href="contact.html">Contact</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -158,11 +158,19 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="cardwrapper">
+                            <!--<div class="cardwrapper">
                                 <img src="img/boceo/1.jpg"><div class="cardcontentcontainer border border-warning">
                                     <h2>The Managing Director</h2>
-                                    <p style="position:relative;overflow: hidden;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.
-                                    </p>
+                                    <p style="overflow-y: scroll;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.
+                                    </p>-->
+                                    <div class="person" style="float:left; display:inline-block; ">
+                                        <span style="float:left;width: 20%;">
+                                            <img src="img/boc/1.jpg" width="570" height"500" />
+                                        </span>
+                                        <span style="float:right;width: 80%;">
+                                            <p style="float:right; display:block;padding-left:10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.adminim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliquaUt enim adminim veniam.</p>
+                                    </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -418,6 +426,8 @@
         <script src="js/blueimp-gallery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/blueimp-gallery-video.js"></script>
+        <script src="js/blueimp-gallery-youtube.js"></script>
         <!--<script src="js/owl.carousel.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
