--- a/IslahAdmin/index.html
+++ b/IslahAdmin/index.html
@@ -55,7 +55,7 @@
                                             <a class="nav-link ttfw" href="index.html">Home <span class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <a class="nav-link dropdown-toggle ttfw" href="aboutus.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             About Us
                                             </a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -126,7 +126,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link ttfw" href="#">Contact</a>
+                                            <a class="nav-link ttfw" href="contact.html">Contact</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle ttfw" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -626,6 +626,8 @@
         <script src="js/blueimp-gallery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/blueimp-gallery-video.js"></script>
+        <script src="js/blueimp-gallery-youtube.js"></script>
         <!-- Google Map js -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDC3Ip9iVC0nIxC6V14CKLQ1HZNF_65qEQ "></script>
         <script>
